fix concourse atc error with cf uaa integration.
for concourse authentication with cf uaa which has self-signed ssl, atc job in concourse bosh release 4.2.1 needs to set cf certificate.
https://github.com/concourse/concourse-bosh-release/blob/master/jobs/atc/spec
and will set /var/vcap/jobs/atc/config/cf_ca_cert in web VM in concourse deployment.


bosh  deploy  -d concourse concourse.yml \
   ...
  -o operations/cf-auth.yml \
  --var cf_client_id=<CONCOURSE_TO_CF> \
  --var cf_client_secret=<CONCOURSE_TO_CF_SECRET>\
  --var cf_api_url=https://<api.system.PCF.URL> \
  -l <PATH_TO_CF_UAA_CERT_FILE>

and 
vi PATH_TO_CF_UAA_CERT_FILE
cf_api_ca_cert: |
  -----BEGIN CERTIFICATE-----
  ...
  -----END CERTIFICATE-----

--- a/cluster/operations/cf-auth.yml
+++ b/cluster/operations/cf-auth.yml
@@ -7,3 +7,6 @@
 - type: replace
   path: /instance_groups/name=web/jobs/name=atc/properties/cf_auth?/api_url
   value: ((cf_api_url))
+- type: replace
+  path: /instance_groups/name=web/jobs/name=atc/properties/cf_auth?/ca_cert/certificate
+  value: ((cf_api_ca_cert))
